fixed appearance of scrollbar on focus mode

--- a/src/GlobalStyles/index.scss
+++ b/src/GlobalStyles/index.scss
@@ -33,8 +33,8 @@ body {
   }
 }
 
-body.focusMode {
-  overflow: hidden;
+body.focusMode::-webkit-scrollbar {
+  width: 0;
 }
 
 body.sidebarExtend {
